# MyLive

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liwinner/mylive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dn_live.c  dn_live.h  native-lib.cpp
app/src/main/java/com/liwinner/mylive/: BeautyActivity.java  MainActivity.java  StartActivity.java
app/src/main/java/com/liwinner/mylive/jin/: PusherNative.java
app/src/main/java/com/liwinner/mylive/jni/: PusherNative.java
app/src/main/java/com/liwinner/mylive/listener/: LiveStateChangeListener.java
app/src/main/java/com/liwinner/mylive/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/liwinner/mylive/pusher/: AudioPusher.java  BasePusher.java  BeautyFilterPush.java  LivePusher.java  VideoPusher.java
app/src/main/java/com/liwinner/mylive/view/: SrsCameraView.java
app/src/main/java/com/seu/magicfilter/advanced/: MagicAmaroFilter.java  MagicAntiqueFilter.java  MagicBeautyFilter.java  MagicBlackCatFilter.java  MagicBrannanFilter.java  MagicBrooklynFilter.java  MagicCalmFilter.java  MagicCoolFilter.java  MagicCrayonFilter.java  MagicEarlyBirdFilter.java  MagicEmeraldFilter.java  MagicEvergreenFilter.java  MagicFreudFilter.java  MagicHealthyFilter.java  MagicHefeFilter.java  MagicHudsonFilter.java  MagicImageAdjustFilter.java  MagicInkwellFilter.java  MagicKevinFilter.java  MagicLatteFilter.java  MagicLomoFilter.java  MagicN1977Filter.java  MagicNashvilleFilter.java  MagicNostalgiaFilter.java  MagicPixarFilter.java  MagicRiseFilter.java  MagicRomanceFilter.java  MagicSakuraFilter.java  MagicSierraFilter.java  MagicSketchFilter.java  MagicSkinWhitenFilter.java  MagicSunriseFilter.java  MagicSunsetFilter.java  MagicSutroFilter.java  MagicSweetsFilter.java  MagicTenderFilter.java  MagicToasterFilter.java  MagicValenciaFilter.java  MagicWaldenFilter.java  MagicWarmFilter.java  (+2 more)
app/src/main/java/com/seu/magicfilter/base/: MagicBaseGroupFilter.java  MagicCameraInputFilter.java
app/src/main/res/layout/: activity_beauty.xml  activity_main.xml  activity_start.xml
app/src/test/java/com/liwinner/mylive/: ExampleUnitTest.java
(+3 files in other folders)
